--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/mcari1311/pokemonNew.git"
   },
+  "engines": {
+    "node": "16.15.0"
+  }, 
   "keywords": [],
   "author": "",
   "license": "ISC",
