--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "engines": {
     "node": "16.15.0"
-  }, 
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +25,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.5.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
